--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: ruby:2.3
 
 pages:
   script:
-  - gem install jekyll gh-pages
+  - gem install jekyll github-pages
   - jekyll build -d public
   artifacts:
     paths:
