--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,20 @@
 image: ruby:2.3
 
 pages:
+
+  before_script:
+    - apt-get update >/dev/null
+    - apt-get install -qq nodejs locales >/dev/null
+    - echo "en_US UTF-8" > /etc/locale.gen
+    - locale-gen en_US.UTF-8
+    - export LANG=en_US.UTF-8
+    - export LANGUAGE=en_US:en
+    - export LC_ALL=en_US.UTF-8
+    - bundle install --jobs $(nproc) --path vendor
+
   script:
     # we need node to execute this
-  - apt-get update -qq && apt-get install -qq nodejs
-  - bundle install --path vendor
-  - LANG=en_US.UTF-8 bundle exec jekyll build -d public
+  - bundle exec jekyll build -d public
   artifacts:
     paths:
     - public
