--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,13 @@
 image: ruby:2.3
 
-pages:
+stages:
+  - build
+  - deploy
 
+build:
+  stage: build
+  only:
+  - pages
   before_script:
     - apt-get update >/dev/null
     - apt-get install -qq nodejs locales >/dev/null
@@ -18,5 +24,51 @@ pages:
   artifacts:
     paths:
     - public
+
+deploy:
+  stage: deploy
   only:
   - pages
+  before_script:
+    ##
+    ## Install ssh-agent if not already installed, it is required by Docker.
+    ## (change apt-get to yum if you use an RPM-based image)
+    ##
+    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )'
+
+    ##
+    ## Run ssh-agent (inside the build environment)
+    ##
+    - eval $(ssh-agent -s)
+
+    ##
+    ## Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
+    ## We're using tr to fix line endings which makes ed25519 keys work
+    ## without extra base64 encoding.
+    ## https://gitlab.com/gitlab-examples/ssh-private-key/issues/1#note_48526556
+    ##
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+
+    ##
+    ## Create the SSH directory and give it the right permissions
+    ##
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+
+    ##
+    ## Use ssh-keyscan to scan the keys of your private server. Replace gitlab.com
+    ## with your own domain name. You can copy and repeat that command if you have
+    ## more than one server to connect to.
+    ##
+    - ssh-keyscan gitlab.com >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
+
+    ##
+    ## Alternatively, assuming you created the SSH_SERVER_HOSTKEYS variable
+    ## previously, uncomment the following two lines instead.
+    ##
+    #- echo "$SSH_SERVER_HOSTKEYS" > ~/.ssh/known_hosts'
+    #- chmod 644 ~/.ssh/known_hosts
+
+  script:
+    - rsync -r public/* gnunicorn_org@unterbau.tech:~/html
