--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-
 stages:
   - build
   - deploy
@@ -10,7 +9,7 @@ build:
   - pages
   before_script:
     - apt-get update >/dev/null
-    - apt-get install -qq nodejs locales >/dev/null
+    - apt-get install -qq nodejs locales rsync >/dev/null
     - echo "en_US UTF-8" > /etc/locale.gen
     - locale-gen en_US.UTF-8
     - export LANG=en_US.UTF-8
