--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,19 +3,18 @@ stages:
   - deploy
 
 build:
-  image: ruby:2.3
+  image: ruby:latest
   stage: build
   only:
   - pages
+
+  variables:
+    JEKYLL_ENV: production
+    LC_ALL: C.UTF-8
+
   before_script:
-    - apt-get update >/dev/null
-    - apt-get install -qq nodejs locales >/dev/null
-    - echo "en_US UTF-8" > /etc/locale.gen
-    - locale-gen en_US.UTF-8
-    - export LANG=en_US.UTF-8
-    - export LANGUAGE=en_US:en
-    - export LC_ALL=en_US.UTF-8
-    - bundle install --jobs $(nproc) --path vendor
+  - gem install bundler
+  - bundle install
 
   script:
     # we need node to execute this
